--- a/Mail_It/.classpath
+++ b/Mail_It/.classpath
@@ -2,16 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="/Users/Raphael/eclipse/apache-log4j-2.0-beta9-bin/log4j-api-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="/Users/Raphael/eclipse/apache-log4j-2.0-beta9-bin/log4j-core-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="/Users/Raphael/eclipse/apache-log4j-2.0-beta9-bin/log4j-flume-ng-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="/Users/Raphael/eclipse/apache-log4j-2.0-beta9-bin/log4j-jcl-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="/Users/Raphael/eclipse/apache-log4j-2.0-beta9-bin/log4j-jmx-gui-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="/Users/Raphael/eclipse/apache-log4j-2.0-beta9-bin/log4j-slf4j-impl-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="/Users/Raphael/eclipse/apache-log4j-2.0-beta9-bin/log4j-taglib-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="/Users/Raphael/eclipse/apache-log4j-2.0-beta9-bin/log4j-to-slf4j-2.0-beta9.jar"/>
-	<classpathentry kind="lib" path="/Users/Raphael/Dropbox/BFH/Konzepte und Methoden der Programmierung/Biel/Series/Serie2_LIB/activation.jar"/>
-	<classpathentry kind="lib" path="/Users/Raphael/Dropbox/BFH/Konzepte und Methoden der Programmierung/Biel/Series/Serie2_LIB/mail.jar"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/mailer_log4j-mail"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
