Added a secondStage for the smtp settings. The settings are now passed to MyProperties. MyProperties is changed to static. The Language Properties are updated with additional text for the smtp settings.

--- a/Mail_It/resources/LangBundle.properties
+++ b/Mail_It/resources/LangBundle.properties
@@ -1,29 +1,36 @@
-file = "File"
-close = "Close"
+file = File
+close = Close
 
-edit = "Edit"
-language = "Language..."
-german = "German"
-french = "French"
-english = "English"
+edit = Edit
+language = Language...
+german = German
+french = French
+english = English
 
-help = "Help"
-about = "About"
+smtpSettings = SMTP Settings
+username = Username
+password = Password
+smtpServer = SMTP Server
+port = Port
+cancel = Cancel
 
-from = "From:"
-fromTip = "Enter a valid mail address"
-to = "To:"
-toTip = "Enter at least one valid mail address. You can enter more addresses if you seperate them with a comma."
-subject = "Subject:"
-subjectTip = "Enter a subject/title"
+help = Help
+about = About
 
-priority = "Priority"
-high = "!! High"
-normal = "! Normal"
-low = "- Low"
+from = From:
+fromTip = Enter a valid mail address
+to = To:
+toTip = Enter at least one valid mail address. You can enter more addresses if you seperate them with a comma.
+subject = Subject:
+subjectTip = Enter a subject/title
 
-logging = "Logging"
+priority = Priority
+high = !! High
+normal = ! Normal
+low = - Low
 
-msgTip = "Enter here your message"
+logging = Logging
 
-send = "Send"
+msgTip = Enter here your message
+
+send = Send
